--- a/express/public/amChart.html
+++ b/express/public/amChart.html
@@ -5,16 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>amCharts</title>
+    <title>DSE 3322 Passing Rate (amChart)</title>
 </head>
 
 <body>
+    <h2>DSE 3322 Passing Rate by Pictorial Chart</h2>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://cdn.amcharts.com/lib/5/index.js"></script>
     <script src="https://cdn.amcharts.com/lib/5/percent.js"></script>
 
-    <div id="chartdiv_pass" style="width:80vw; height:50vh"></div>
 
+    <div id="chartdiv_pass" style="width:80vw; height:50vh"></div>
     <script src="js/graduate.js"></script>
 </body>
 
